fix:截图坐标不准

--- a/play.html
+++ b/play.html
@@ -9,12 +9,12 @@
 </head>
 <body class="horizontal">
     <div class="cut">
-        <img id="old" src="imgscroll-1.jpg" alt="" style="-webkit-filter: blur(5)">
+        <img id="old" src="imgscroll-1.jpg" alt="" style="-webkit-filter: blur(2);">
         <canvas id="canvas"></canvas>
     </div>
-    <div class="img">
-        <img id="showimg" src="" alt="">
-    </div>
+    <!--<div class="img">-->
+        <!--<img id="showimg" src="" alt="">-->
+    <!--</div>-->
     <script src="play.js"></script>
 </body>
 </html>
